JDP240201-24_OrderController_finalization (#35)
* OrderController finalization without CartController finalized - Postman test needed with CartController merged

* OrderController - details

* OrderController - another detail

* OrderController - createOrder moved from CartController to OrderController, the same changes in service

* OrderController - quick fix

* OrderController - pushing something, because I have to

* OrderController - almost all done! some changes needed of course

* OrderController - almost all done! some changes needed of course

* OrderController - everything works in postman except updateOrder + clean up everywhere

* OrderController - added updateOrder, addProductToOrder, removeProductFromOrder - everything works in postman! :)

* OrderController - GroupDto and GroupMapper adjusted to other mappers - works the same